<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="340dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_height="480dp"
    android:background="@drawable/circular_border_solid_dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/set_your_account_properties"
        android:textColor="@color/muster"
        android:layout_gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/account_bank_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/muster"
        android:layout_margin="20dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:fontFamily="@font/profile_font"
        android:maxLength="20"
        android:hint="@string/bank_name_hint" />

    <EditText
        android:id="@+id/account_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/muster"
        android:layout_margin="20dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:fontFamily="@font/profile_font"
        android:inputType="number"
        android:maxLength="16"
        android:hint="@string/bank_number_hint" />

    <EditText
        android:id="@+id/account_shaba_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/muster"
        android:layout_margin="20dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:fontFamily="@font/profile_font"
        android:maxLength="26"
        android:hint="@string/bank_shaba_hint" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dismiss_action"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="17sp"
            android:textStyle="bold"
            android:fontFamily="@font/profile_font"
            android:textColor="@color/white"
            android:background="@drawable/circular_border_solid_primary_dark"
            android:shadowDx="0.3"
            android:shadowDy="0.3"
            android:elevation="4dp" />

        <Button
            android:id="@+id/add_action"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/profile_font"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/circular_border_solid_primary_dark"
            android:shadowDx="0.3"
            android:shadowDy="0.3"
            android:elevation="4dp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

</LinearLayout>