<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/price_alarm_header"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/profile_font">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/alarm_setting_layout"
                android:orientation="horizontal"
                android:weightSum="3">

                <!--
                todo -> add menu.
                -->

                <TextView
                    android:id="@+id/coin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/choose"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/profile_font">

                </TextView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/upLimit"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/upper_limit"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:textColor="@color/dark"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/profile_font">

                    </EditText>

                    <EditText
                        android:id="@+id/downLimit"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/down_limit"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:textColor="@color/dark"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/profile_font">

                    </EditText>

                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/usd"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/profile_font">

                </TextView>


            </LinearLayout>

           <Button
               android:id="@+id/setAlarm"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:gravity="center"
               android:layout_margin="20dp"
               android:background="@drawable/set_button_style"
               android:text="@string/set"
               android:textSize="18sp"
               android:padding="5dp"
               android:textStyle="bold"
               android:fontFamily="@font/profile_font">

            </Button>


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/closeAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_all_alarms"
            android:layout_marginVertical="30dp"
            android:elevation="4dp"
            android:padding="5dp"
            android:fontFamily="@font/profile_font">

        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>