<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/back_fingerprint">

    <ImageView
        android:id="@+id/language_header_image"
        android:layout_width="84dp"
        android:layout_height="84dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_language" />

    <TextView
        android:id="@+id/language_header"
        app:layout_constraintTop_toBottomOf="@id/language_header_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/roman_silver"
        android:textSize="25sp"
        android:text="@string/language_header"
        android:textAlignment="center"
        android:gravity="center"
        android:foregroundGravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/language_header"
        android:layout_margin="40dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/language_radio_group">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/english"
                android:id="@+id/radio_button_english"
                android:textSize="20sp"
                android:textStyle="italic"
                android:textColor="@color/roman_silver"
                android:gravity="left"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/persian"
                android:id="@+id/radio_button_persian"
                android:textSize="20sp"
                android:textStyle="italic"
                android:textColor="@color/roman_silver"
                android:gravity="left"/>

        </RadioGroup>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>