<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorAccent">


    <LinearLayout

        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/top_list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/roman_silver"
            android:progressTint="@color/roman_silver"
            android:elevation="4dp"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/roman_silver">

        </ProgressBar>

    </LinearLayout>


    <LinearLayout

        android:id="@+id/top_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/chart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/convert_chart"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="changeChart"
            app:lottie_autoPlay="true"
            app:lottie_fileName="chart.json"
            app:lottie_loop="true"
            android:layout_marginStart="20dp">

        </com.airbnb.lottie.LottieAnimationView>

    </LinearLayout>


    <RelativeLayout

        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/filters"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_list"
        android:background="@color/colorAccent">

        <com.github.mikephil.charting.charts.CandleStickChart

            android:id="@+id/candle_stick_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:visibility="gone" />

        <com.github.mikephil.charting.charts.LineChart

            android:id="@+id/spark_line_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:visibility="visible" />


    </RelativeLayout>

    <LinearLayout

        android:id="@+id/filters"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/custom_border"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintTop_toBottomOf="@id/chart">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="yearly"
            android:text="@string/year"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            android:textColor="@color/dark"
            android:fontFamily="@font/profile_font">

        </TextView>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="sixMonth"
            android:text="@string/_6mon"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            android:textColor="@color/dark"
            android:fontFamily="@font/profile_font">

        </TextView>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="threeMonth"
            android:text="@string/_3mon"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            android:textColor="@color/dark"
            android:fontFamily="@font/profile_font">

        </TextView>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="monthly"
            android:text="@string/mon"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            android:textColor="@color/dark"
            android:fontFamily="@font/profile_font">

        </TextView>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="weekly"
            android:text="@string/week"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            android:textColor="@color/dark"
            android:fontFamily="@font/profile_font">

        </TextView>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="daily"
            android:text="@string/day"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            android:textColor="@color/dark"
            android:fontFamily="@font/profile_font">

        </TextView>


    </LinearLayout>


    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintBottom_toTopOf="@id/chart_data"
        app:layout_constraintTop_toBottomOf="@id/filters">

    </Space>

    <LinearLayout
        android:id="@+id/chart_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/chart_data_border"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/symbol"
                android:textStyle="bold"
                android:textColor="@color/dark"
                android:fontFamily="@font/profile_font">

            </TextView>

            <TextView
                android:id="@+id/chart_symbol"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/dark"
                android:fontFamily="@font/profile_font">

            </TextView>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp">

        </Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/chart_data_border"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/total_count"
                android:textStyle="bold"
                android:textColor="@color/dark"
                android:fontFamily="@font/profile_font">

            </TextView>

            <TextView
                android:id="@+id/chart_total_count"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/dark"
                android:fontFamily="@font/profile_font">

            </TextView>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp">

        </Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/chart_data_border"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/total_traded_volume"
                android:textStyle="bold"
                android:textColor="@color/dark"
                android:fontFamily="@font/profile_font">

            </TextView>

            <TextView
                android:id="@+id/chart_total_volume"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/dark"
                android:fontFamily="@font/profile_font">

            </TextView>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp">

        </Space>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>